tests/cases/literals/errors/interface-removed.ari
interface Show[T] {
  fn show(value: T) -> i64
}

fn main() -> i64 {
  return 0;
}
